<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome Reader,</string>
    <string name="nav_header_subtitle">Let\'s Get Reading</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="note_title_label">Note Title</string>
    <string name="welcome">Hi Reader</string>
    <string name="note_title_hint">Enter title for note here</string>
    <string name="note_description_label">Note Description</string>
    <string name="default_number">0</string>
    <string name="note_title_amount">Note Count:</string>
    <string name="note_description_hint">Enter description here</string>

    <string name="note_details_label">Details</string>
    <string name="note_photo_image_description">Note book photo (set)</string>
    <string name="share_button_text">Share Your Note</string>
    <string name="delete_note">Remove Note</string>

    <string name="note_photo_no_image_description">Not image in Note Images</string>
    <string name="note_photo_button_description">Note Photo Button</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Shared Book Notes</string>
    <string name="menu_notes">Personal Collection</string>
</resources>
